<resources>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="app_name">neart_v2</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Full_name">Full Name</string>
    <string name="Email_Address">\Email Address</string>
    <string name="ContactNo">Contact No.</string>
    <string name="Create_Account_as_Tutor">Create Account as Tutor</string>
    <string name="Password">Password</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Profession">\Profession</string>
    <string name="Congrats">CONGRATS</string>
    <string name="Attach">Attachment of Files</string>
    <string name="Select">Select File to Upload</string>
    <string name="select_file_to_upload">Select File to Upload</string>
    <string name="resume">Pause Upload</string>
    <string name="cancel">Cancel Upload</string>
    <string name="uploading">Your File is Uploading</string>
    <string name="your_file_is_uploading">Your File is Uploading</string>
    <string name="size_label">0</string>
    <string name="filename_type">filename.type</string>
    <string name="progress_label">0</string>
    <string name="next">NEXT</string>
    <string name="button">Choose</string>
    <string name="Resume">Resume</string>
    <string name="_2_valid_id">2 valid ID</string>
    <string name="diploma_certificates">Diploma/Certificates</string>
    <string name="nbi_police_clearance">NBI/Police Clearance</string>
    <string name="requirements">Requirements</string>
    <string name="if_student">if student:</string>
    <string name="school_id">School ID</string>
    <string name="reg_form">Reg. Form</string>
    <string name="certificates">Certificates</string>
    <string name="save">SAVE</string>
    <string name="Create_Account_as_Tutee">Create Account as Tutee</string>
    <string name="WELCOME">WELCOME TO NEAR-T!</string>
    <string name="WELCOME_">Thank you for using this application. You are already registered, you can be a tutor or a tutee. </string>

    <string-array name="City_array">
        <item>Select City:</item>
        <item>Caloocan</item>
        <item>Las Piñas</item>
        <item>Makati</item>
        <item>Malabon</item>
        <item>Mandaluyong</item>
        <item>Manila</item>
        <item>Marikina</item>
        <item>Muntinlupa</item>
        <item>Navotas</item>
        <item>Parañaque</item>
        <item>Pasay</item>
        <item>Pasig </item>
        <item>Pateros</item>
        <item>Quezon</item>
        <item>San Juan</item>
        <item>Taguig</item>
        <item>Valenzuela</item>

    </string-array>

</resources>
