<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    tools:context="com.neart.romanfeliciano.neart_v2.Tutor.CreateActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/Create_Account_as_Tutor"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/textNam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/Full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/textEma"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textNam"
        android:ems="10"
        android:hint="@string/Email_Address"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/textNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEma"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/ContactNo"
        android:inputType="textPostalAddress" />


    <EditText
        android:id="@+id/textPas"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textNum"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="250dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Male" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/Female" />

        </RadioGroup>


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:entries="@array/City_array" />

        <EditText
            android:id="@+id/textPro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Profession"
            android:inputType="textPersonName" />


        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:onClick="buttonClick"
            android:text="@string/next"/>





    </LinearLayout>

</RelativeLayout>
