<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:backgroundTint="@android:color/black"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">


    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="-"
        android:text="@string/Attach"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="visible"
        tools:text="@string/Attach" />

    <Button
        android:id="@+id/select_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_label"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_btn_background"
        android:text="@string/select_file_to_upload"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/upload_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/bottom_layout_background"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/upload_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/your_file_is_uploading"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/filename_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/filename_type"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/upload_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_custom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/size_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="-"
                android:text="@string/size_label"/>


            <TextView
                android:id="@+id/progress_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="-"
                android:gravity="end"
                android:text="@string/progress_label" />

        </LinearLayout>

        <Button
            android:id="@+id/pause_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/pause_background"
            android:fontFamily="-"
            android:text="@string/resume"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cancel_background"
            android:fontFamily="-"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange" />
    </LinearLayout>

</RelativeLayout>